<resources>
    <string name="app_name">NeoCafeTeae1Prototype</string>
    <string name="vhod">Вход</string>
    <string name="name_registation_number">Имя</string>
    <string name="telephone_number_registation">Номер тел</string>
    <string name="registration_number_example">777 777 777</string>
    <string name="next">Далее</string>
    <string name="sms_code">СМС код</string>
    <string name="type_code">Введите код</string>
    <string name="Potverdit">Потдвердить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_code">QR code</string>
    <string name="mapping">Филиалы</string>
    <string name="shopping">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="qr_code_how_work">Наведите свой сканер на QR-code который на столе, что-бы забронировать стол</string>
    <string name="popular">Популярное</string>
    <string name="All">Все</string>
    <string name="Menu">Меню</string>
    <string name="street">Филиал на улице:</string>
    <string name="time_work">Режим работы:</string>
    <string name="send_again">Отправить повторно</string>
    <string name="if_message_null">Если код не пришел, нажмите кнопку отправить повторно</string>
    <string name="on_the_map">На карте</string>
    <string name="about_branch">Описание</string>
    <string name="call">Позвонить</string>
    <string name="skip">Пропустить</string>
    <string name="registration">Регистрация</string>
    <string name="birthday">Введите дату рожденя для дольнейшего начисления бонусов</string>
    <string name="type_birthday">Дата рождения</string>
    <string name="birthday_example">23/06/2021</string>
    <string name="sign_in">Войти</string>
    <string name="result_bonus">Вы накопили</string>
    <string name="bonus">бонусов</string>
    <string name="history">История заказов</string>
    <string name="clear">Очистить</string>
    <string name="result">Итого:</string>
    <string name="notification">Уведомление</string>
    <string name="delivery">C собой</string>
    <string name="order">Заказать</string>
    <string name="Coffee">Кофе</string>
    <string name="tea">Чай</string>
    <string name="drinks">Напитки</string>
    <string name="desserts">Десерты</string>
    <string name="bakery">Выпечка</string>
    <string name="add">Добавить</string>
    <string name="current_bonus">Ваш текущий бонус:</string>
    <string name="amount_bonus">Количество бонусов</string>
    <string name="ready">Готово</string>
    <string name="less_bonus">У вас не достаточно бонусов*</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="exit">Выход</string>
    <string name="kg_number_code">+996</string>
    <string name="in_shop">В заведении</string>
    <string name="empty">Ой пусто!</string>
    <string name="go_to_menu">Перейти в меню</string>
    <string name="Sum">Сумма:</string>
    <string name="Bonus">Бонусы:</string>
<<<<<<< HEAD
    <string name="date_format">MM/dd/yyyy</string>
    <string name="hour_format">HH:mm</string>
=======
>>>>>>> 3ca4717 (Connected Shopping Fragment and connect QR Fragment)
</resources>