<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:fillViewport="true"
    tools:context=".view.registration.RegistrationBirthdayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/Constraint_Layout_Default">


        <TextView
            android:id="@+id/skip"
            style="@style/TextView_16sp_Roboto"
            android:layout_margin="@dimen/margin_20_dp"
            android:clickable="true"
            android:text="@string/skip"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/registration_main_text_view"
            android:layout_marginTop="100dp"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skip" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/TextView_16sp_Bold"
            android:layout_width="350dp"
            android:layout_marginTop="@dimen/default_margin_start_16dp"
            android:text="@string/birthday"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextView_16sp_Thin"
            android:layout_marginTop="26dp"
            android:text="@string/type_birthday"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            style="@style/CardView_Default"
            android:layout_marginStart="@dimen/default_margin_start_16dp"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_marginEnd="@dimen/default_margin_start_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edit_text"
                style="@style/registration_edit_text"
                android:fontFamily="@font/roboto"
                android:hint="@string/birthday_example"
                android:inputType="phone"
                android:maxLength="10"
                app:mask="##/##/####" />
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            style="@style/registration_button"
            android:layout_marginTop="60dp"
            android:enabled="false"
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card"
            tools:ignore="UsingOnClickInXml" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/margin_50_dp"
            android:backgroundTint="@color/main_purple_enable_color"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>