<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/default_nested_scroll_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/register_background"
    tools:context=".view.registration.RegistrationNumberFirebaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Constraint_Layout_Default">

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="@dimen/margin_156_dp"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/registration_main_text_view" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextView_14sp_Thin"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/margin_20_dp"
            android:layout_marginTop="@dimen/margin_35_dp"
            android:text="@string/name_registation_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/CardView_Default"
            android:layout_marginStart="@dimen/default_margin_start_16dp"
            android:layout_marginEnd="@dimen/default_margin_start_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/name"
                android:inputType="textCapSentences"
                android:fontFamily="@font/roboto"
                style="@style/registration_edit_text" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            style="@style/TextView_14sp_Thin"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_26_dp"
            android:text="@string/telephone_number_registation"
            android:layout_marginEnd="@dimen/margin_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            style="@style/CardView_Default"
            android:layout_marginStart="@dimen/default_margin_start_16dp"
            android:layout_marginEnd="@dimen/default_margin_start_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/number_code"
                style="@style/TextView_18sp_Roboto"
                android:text="@string/kg_number_code"
                android:textColor="@color/grey"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10_dp" />

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/number_phone_text_view"
                style="@style/registration_edit_text"
                android:hint="@string/registration_number_example"
                android:inputType="phone"
                app:mask="###-###-###"
                android:fontFamily="@font/roboto"
                android:maxLength="11" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_marginTop="@dimen/margin_60_dp"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            style="@style/registration_button"
            tools:ignore="UsingOnClickInXml" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>