<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".registration.NumberRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="156dp"
            android:text="@string/vhod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/registration_main_text_view" />

        <TextView
            android:id="@+id/textView2"
            style="@style/default_text_view"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/name_registation_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/registration_card_view"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/name"
                android:fontFamily="@font/roboto"
                style="@style/registration_edit_text" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            style="@style/default_text_view"
            android:layout_marginTop="26dp"
            android:text="@string/telephone_number_registation"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            style="@style/registration_card_view"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <EditText
                android:id="@+id/number_phone"
                style="@style/registration_edit_text"
                android:hint="@string/registration_number_example"
                android:inputType="phone"
                android:fontFamily="@font/roboto"
                android:maxLength="9" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_marginTop="60dp"
            android:text="@string/next"
            android:onClick="onSendMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            style="@style/registration_button"
            tools:ignore="UsingOnClickInXml" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>