<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_enable_custom_style"
    tools:context=".view.bottom_navigation_items.home.menu.MenuFragment">

    <include
        android:id="@+id/include"
        layout="@layout/appbar_notification_with_ic_back"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Constraint_Layout_Default"
            android:background="@drawable/layout_top_rounded">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30_dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/all"
                        style="@style/Custom_Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/All" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/coffee"
                        style="@style/Custom_Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Coffee" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/tea"
                        style="@style/Custom_Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tea" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/drinks"
                        style="@style/Custom_Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drinks" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/desserts"
                        style="@style/Custom_Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desserts" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/bakery"
                        style="@style/Custom_Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bakery" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_marginTop="@dimen/margin_30_dp"
                android:layout_width="match_parent"
                android:layoutAnimation="@anim/layout_animation"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>