<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/register_background"
    style="@style/default_nested_scroll_view"
    tools:context=".application.registration.ReceiveMessageFirebaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Constraint_Layout_Default">

        <ImageView
            android:id="@+id/back_button"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/toolbar_icon_image" />

        <TextView
            android:id="@+id/textView4"
            style="@style/registration_main_text_view"
            android:layout_marginTop="100dp"
            android:text="@string/sms_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextView_16sp_Bold"
            android:layout_marginTop="13dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextView_16sp_Bold"
            android:layout_marginTop="26dp"
            android:textColor="@color/white"
            android:text="@string/type_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/back_button"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otpTextView"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:bar_active_color="@color/green"
            android:layout_marginTop="14dp"
            android:textColor="#383838"
            app:bar_enabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            app:length="6"
            app:otp_box_background="@color/white"
            app:otp_text_size="32sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            style="@style/registration_button"
            android:layout_marginTop="26dp"
            android:enabled="false"
            android:text="@string/Potverdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpTextView" />

        <TextView
            android:id="@+id/textView7"
            style="@style/TextView_14sp_Roboto"
            android:layout_width="250dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:text="@string/if_message_null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_button"
            style="@style/registration_button"
            android:text="@string/send_again"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>