<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        style="@style/TextView_18sp_Roboto"
        android:layout_marginTop="50dp"
        android:text="@string/current_bonus"
        android:textColor="@color/white_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentBonus"
        style="@style/TextView_18sp_Roboto"
        android:layout_marginStart="3dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white_grey"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amount"
        style="@style/TextView_16sp_Bold"
        android:layout_marginTop="24dp"
        android:text="@string/amount_bonus"
        android:textColor="@color/alert_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentBonus" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/default_margin_start_16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="@dimen/default_margin_start_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount">

        <EditText
            android:id="@+id/bonus_edit_text"
            android:maxLines="1"
            style="@style/registration_edit_text"
            android:inputType="number" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/alert_messag"
        style="@style/TextView_16sp_Roboto"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:text="@string/less_bonus"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ready"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="@dimen/margin_20_dp"
        android:background="@drawable/button_enable_custom_style"
        android:text="@string/ready"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toBottomOf="@id/ready" />


</androidx.constraintlayout.widget.ConstraintLayout>