<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".application.registration.CheckMessageFromFirebase">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/registration_main_text_view"
            android:layout_marginTop="100dp"
            android:text="@string/sms_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView5"
            style="@style/default_text_view"
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="Код будет отправлен на номер 0777652485" />

        <TextView
            android:id="@+id/textView6"
            style="@style/default_text_view"
            android:layout_marginTop="26dp"
            android:text="@string/type_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otpTextView"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:bar_active_color="@color/green"
            android:layout_marginTop="14dp"
            android:textColor="#383838"
            app:bar_enabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            app:length="6"
            app:otp_box_background="@color/white"
            app:otp_text_size="32sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            style="@style/registration_button"
            android:layout_marginTop="26dp"
            android:enabled="false"
            android:text="@string/Potverdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpTextView" />

        <TextView
            android:id="@+id/textView7"
            style="@style/default_text_view"
            android:layout_width="250dp"
            android:layout_marginTop="30dp"
            android:text="Если код не пришел, нажмите кнопку отправить повторно"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_button"
            style="@style/registration_button"
            android:text="Отправить повторно"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>